--- a/src/main/resources/templates/house/add.html
+++ b/src/main/resources/templates/house/add.html
@@ -5,10 +5,231 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>房源查询</title>
+    <title>添加房源</title>
+    <link th:href="@{/lib/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 </head>
 <body>
-    <h2>房源</h2>
+    <br><br><br>
+    <form th:action="@{/house/add}" method="post" enctype="multipart/form-data"
+          class="form-horizontal" role="form" id="addForm">
+        <!--   省     -->
+        <div class="form-group ">
+            <label for="province" class="col-sm-2 control-label">所在省份</label>
+            <div class="col-sm-4 input-group">
+                <select class="form-control" id="province" name="province">
+                    <option value=''>---请选择---</option>
+                </select>
+            </div>
+        </div>
+        <!--   市    -->
+        <div class="form-group">
+            <label for="city" class="col-sm-2 control-label">所在市</label>
+            <div class="col-sm-4 input-group">
+                <select class="form-control" id="city" name="city">
+                    <option value="">---请选择---</option>
+                </select>
+            </div>
+        </div>
 
+        <!--   区    -->
+        <div class="form-group">
+            <label for="area" class="col-sm-2 control-label">所在区(县)</label>
+            <div class="col-sm-4 input-group">
+                <select class="form-control" id="area" name="area">
+                    <option value="">---请选择---</option>
+                </select>
+            </div>
+        </div>
+        <!--   租赁方式    -->
+        <div class="form-group">
+            <label for="rent_mode" class="col-sm-2 control-label">租赁方式</label>
+            <div class="col-sm-4 input-group">
+                <select class="form-control" id="rent_mode" name="rentMode">
+                    <option value="">---请选择---</option>
+                </select>
+            </div>
+        </div>
+        <!--    朝向    -->
+        <div class="form-group">
+            <label for="orientation" class="col-sm-2 control-label">朝向</label>
+            <div class="col-sm-4 input-group">
+                <select class="form-control"  id="orientation" name="orientation">
+                    <option value="">---请选择---</option>
+                </select>
+            </div>
+        </div>
+        <!--    户型    -->
+        <div class="form-group">
+            <label for="house_type" class="col-sm-2 control-label">户型</label>
+            <div class="col-sm-4 input-group">
+                <select class="form-control" id="house_type" name="houseType">
+                    <option value="">---请选择---</option>
+                </select>
+            </div>
+        </div>
+        <!--    租金    -->
+        <div class="form-group">
+            <label for="rental" class="col-sm-2 control-label">租金</label>
+            <div class="col-sm-4 input-group">
+               <input type="number" name="rental" id="rental" class="form-control" >
+            </div>
+        </div>
+        <!--    地址    -->
+        <div class="form-group">
+            <label for="address" class="col-sm-2 control-label">地址</label>
+            <div class="col-sm-4 input-group">
+                <input type="text" name="address" id="address" class="form-control" placeholder="详细地址" >
+            </div>
+        </div>
+        <!--    图片    -->
+        <div class="form-group">
+            <label for="pic" class="col-sm-2 control-label">图片</label>
+            <div class="col-sm-4 input-group">
+                <input type="file" name="pic" id="pic" class="form-control">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">添加</button>
+            </div>
+        </div>
+    </form>
+
+
+
+    <script th:src="@{/lib/js/jquery/jquery.min.js}"></script>
+    <script th:src="@{/lib/bootstrap/js/bootstrap.min.js}"></script>
+    <!--jquery 校验插件 vaildate 在 messages_zh得面-->
+    <script th:src="@{/lib/js/jquery/validate/jquery.validate.min.js}"></script>
+    <script th:src="@{/lib/js/jquery/validate/messages_zh.min.js}"></script>
+    <script th:inline="javascript">
+        const path =[[${#request.getContextPath()}]];
+        const emptyOption="<option value=''>---请选择---</option>";
+
+        //当页面加载时区调用方法
+        $(function() {
+            //查询省
+            House.queryArea('province');
+            //当省份发生被选择或切换时 将市区清空 判断后查询 并绑定元素
+            $('#province').change(function () {
+
+                $("#city").html(emptyOption);
+                $("#area").html(emptyOption);
+                if(this.value) {
+                    House.queryArea('city', this.value);
+                }
+            });
+            //当城市发生被选择或切换时 将市区清空 判断后查询 并绑定元素
+            $("#city").change(function () {
+                $("#area").html(emptyOption);
+                if(this.value){
+                    House.queryArea('area',this.value);
+                }
+            })
+
+            //查询租赁方式
+            House.queryDict('rent_mode');
+            //查询朝向
+            House.queryDict('orientation');
+            //查询户型
+            House.queryDict('house_type');
+            //调用验证方法
+            House.validateForm();
+
+        });
+
+        //定义一个对象包含查询地区和查询字典数据等接口
+        let House={
+            //查询省市区级联  pid用来查询  documentId用来绑定下来菜单
+            queryArea:function (documentId,pid) {
+                pid = pid || 0;
+                $.ajax({
+                    url: path+"/area/queryByPid",
+                    type:"get",
+                    data: 'pid='+pid,
+                    dataType:'json',
+                    success:function (res) {
+                        //res为数组 [{id:1,name:"山东省",pid:0},{},{}...]
+                        let options ="<option value=''>---请选择---</option>"
+                        for(let area of res){
+                            options+="<option value='"+area.id+"'>"
+                                + area.name +
+                                "</option>"
+                        }
+                        $("#"+documentId).html(options);
+                    }
+                });
+
+            },
+            /*
+            * 查询租赁方式 户姓朝向
+            * */
+            queryDict:function (groupId){
+                $.ajax({
+                    url: path+'/dict/'+groupId,
+                    type:'get',
+                    data:'',
+                    dataType:'json',
+                    success:function (res) {
+                        let options=emptyOption;
+                        $.each(res,function (index,dict) {
+                            options+="<option value='" +dict.value+ "'>"
+                                + dict.name +"</option>"
+                        });
+                        $("#"+groupId).html(options);
+                    }
+                })
+            },
+            //校验表单项
+            validateForm:function () {
+                //表单id
+                $('#addForm').validate({
+                    //开启debug模式 只验证不提交表单
+                    debug: false,
+                    //验证成功之后 可以在这里自定义表单提交方式 如果是使用ajax提交，即使debug为false  他也会走这个方法
+                    /*
+                    submitHandler:function(){
+
+                        alert("验证成功")
+                    },
+                     */
+                    //其实必选项为label<label id="province-error" class="error" for="province">省为必填项
+                    //可修改成div
+                    errorElement: 'div',
+                              //错误提示的消息得dom元素,被校验得dom元素
+                    errorPlacement:function(errorEle,validateEle){
+                        //将校验提示消息放到后面框框
+                        errorEle.addClass("input-group-addon");
+                        //然后追加到被检验的元素得父级元素
+                        errorEle.appendTo(validateEle.parent());
+                    },
+                    //校验合格执行：
+                    success:function(msgElement){
+                        //将ok放到右边框内
+                        msgElement.addClass("input-group-addon").text("ok");
+                    },
+                    //校验规则：rules 都是一个对象
+                    rules:{
+                        //针对name属性抓取   {} 为对象 一个属性有一个值
+                        province: 'required',//为name属性为province得表单项进行校验
+                        address:{
+                            required:true,
+                            maxlength:10
+                        }
+                    },
+                    //失败后显示消息：messages
+                    messages:{
+                        province: "省为必填项",
+                        address:{
+                            required:"地址为必填",
+                            maxlength:"十个字符以内"
+                        }
+                    },
+
+                })
+            }
+        }
+    </script>
 </body>
 </html>
