添加页面后台验证添加

--- a/src/main/resources/templates/house/add.html
+++ b/src/main/resources/templates/house/add.html
@@ -226,6 +226,7 @@
                     //失败后显示消息：messages
                     messages:{
                         province: "省为必填项",
+                        city:'城市为必填项',
                         address:{
                             required:"地址为必填",
                             maxlength:"十个字符以内"
