--- a/src/main/resources/templates/house/add.html
+++ b/src/main/resources/templates/house/add.html
@@ -83,9 +83,9 @@
         </div>
         <!--    图片    -->
         <div class="form-group">
-            <label for="pic" class="col-sm-2 control-label">图片</label>
+            <label for="file" class="col-sm-2 control-label">图片</label>
             <div class="col-sm-4 input-group">
-                <input type="file" name="pic" id="pic" class="form-control">
+                <input type="file" name="file" id="file" class="form-control">
             </div>
         </div>
 
