--- a/src/main/resources/templates/house/list.html
+++ b/src/main/resources/templates/house/list.html
@@ -13,6 +13,7 @@
 <!--  查询条件  -->
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
+        <!--  查询条件  -->
         <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -109,9 +110,114 @@
         </div>
     </div>
 </div>
+
 <table id="listTable"></table>
 
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">编辑</h4>
+            </div>
+            <div class="modal-body">
+                <!--表单提交  -->
+                <form th:action="@{/house/update}"
+                      method="post"
+                      id="updateForm"
+                      class="form-horizontal" role="form">
 
+                    <!-- id隐藏域：用于更新房源 -->
+                    <input type="hidden" name="id" id="update_house_Id">
+
+                    <!-- 隐藏域：将post请求转成put请求 -->
+                    <input type="hidden" name="_method" value="put">
+
+                    <!-- 1.省 -->
+                    <div class="form-group">
+                        <label for="update_province" class="col-sm-2 control-label">所在省</label>
+                        <div class="col-sm-6 input-group">
+                            <select id="update_province" name="province" class="form-control">
+                                <option value="">--请选择--</option>
+                            </select>
+                        </div>
+                    </div>
+                    <!-- 2.市 -->
+                    <div class="form-group">
+                        <label for="update_city" class="col-sm-2 control-label">所在市</label>
+                        <div class="col-sm-6 input-group">
+                            <select id="update_city" name="city" class="form-control">
+                                <option value="">--请选择--</option>
+                            </select>
+                        </div>
+                    </div>
+                    <!-- 3.区县 -->
+                    <div class="form-group">
+                        <label for="update_area" class="col-sm-2 control-label">所在区县</label>
+                        <div class="col-sm-6 input-group">
+                            <select id="update_area" name="area" class="form-control">
+                                <option value="">--请选择--</option>
+                            </select>
+                        </div>
+                    </div>
+                    <!-- 4.租赁方式 -->
+                    <div class="form-group">
+                        <label for="update_rent_mode" class="col-sm-2 control-label">租赁方式</label>
+                        <div class="col-sm-6 input-group">
+                            <select id="update_rent_mode" name="rentMode" class="form-control">
+                                <option value="">--请选择--</option>
+                            </select>
+                        </div>
+                    </div>
+                    <!-- 5.朝向 -->
+                    <div class="form-group">
+                        <label for="update_orientation" class="col-sm-2 control-label">朝向</label>
+                        <div class="col-sm-6 input-group">
+                            <select id="update_orientation" name="orientation" class="form-control">
+                                <option value="">--请选择--</option>
+                            </select>
+                        </div>
+                    </div>
+                    <!-- 6.户型 -->
+                    <div class="form-group">
+                        <label for="update_house_type" class="col-sm-2 control-label">户型</label>
+                        <div class="col-sm-6 input-group">
+                            <select id="update_house_type" name="houseType" class="form-control">
+                                <option value="">--请选择--</option>
+                            </select>
+                        </div>
+                    </div>
+                    <!-- 7. 租金 -->
+                    <div class="form-group">
+                        <label for="update_rental" class="col-sm-2 control-label">租金</label>
+                        <div class="col-sm-6 input-group">
+                            <input type="number" name="rental" id="update_rental" class="form-control">
+                        </div>
+                    </div>
+                    <!-- 8. 地址 -->
+                    <div class="form-group">
+                        <label for="update_address" class="col-sm-2 control-label">地址</label>
+                        <div class="col-sm-6 input-group">
+                            <input type="text" name="address" id="update_address" class="form-control">
+                        </div>
+                    </div>
+                    <!-- 9.关闭和更新按钮 -->
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-3">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                            <button type="submit" class="btn btn-primary">更新</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+<!--        <div class="modal-footer">-->
+<!--            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+<!--            <button type="button" class="btn btn-primary">Save changes</button>-->
+<!--        </div>-->
+        </div>
+    </div>
+</div>
 
 <script th:src="@{/lib/js/jquery/jquery.min.js}" type="text/javascript"></script>
 <script th:src="@{/lib/bootstrap/js/bootstrap.min.js}" type="text/javascript"></script>
@@ -148,6 +254,28 @@
         //查询户型和朝向
         House.getQueryPanelDict("house_type");
         House.getQueryPanelDict("orientation");
+
+        //=================编辑模态框的加载===========================================
+       //省市级联
+        House.queryArea('update_province',0);
+        $('#update_province').change(function(){
+            $("#update_city").html(option);
+            $("#update_area").html(option);
+            if(this.value){
+                House.queryArea('update_city',this.value);
+            }
+        });
+        $('#update_city').change(function(){
+            $("#update_area").html(option);
+            if(this.value){
+                House.queryArea('update_area',this.value);
+            }
+        });
+
+        //租金  朝向  户型
+        House.queryUpdateModelDict("rent_mode");
+        House.queryUpdateModelDict("house_type");
+        House.queryUpdateModelDict("orientation");
     });
 
     let House ={
@@ -205,8 +333,11 @@
                         }
                     },
                     {title: '操作',formatter: function (value,row,index) {
-                            return "更新";
-                        }
+                        let updateBtn ="<button id='updateBtn' class='btn btn-primary' type='button'" +
+                                       "data-toggle='modal' data-target='#myModal'>更新</button>"
+                        return  updateBtn;
+                        },
+                        events:houseEvent
                     },
                 ]
 
@@ -219,6 +350,7 @@
                 type:'get',
                 dataType: 'json',
                 data:'pid='+pid,
+                async:false,//改为false  为同步请求  省的返回之后  在继续查询 不反悔 继续等待
                 success:function (res) {
                     let options="<option value=\"\">--请选择--</option>"
                     $.each(res,function (index,area) {
@@ -238,7 +370,6 @@
                 data:'',
                 dataType: 'json',
                 success:function (res) {
-                    console.log(res);
                     let radios = '';
                     for(let i in res) {
                         let showName = res[i].name;
@@ -251,6 +382,7 @@
                 }
             })
         },
+        //查询字典项
         getQueryPanelDict: function(groupId) {
             $.ajax({
                 url:path+"/dict/"+groupId,
@@ -269,8 +401,48 @@
                 }
             });
         },
+        //查询model框的字典项户型 朝向  租金
+        queryUpdateModelDict:function (groupId) {
+            $.ajax({
+                url:path+"/dict/"+groupId,
+                type:'get',
+                data:'',
+                dataType:'json',
+                success:function (res) {
+                    let options="<option value=''>--请选择--</option>"
+                    $.each(res,function (index,dict) {
+                        options+="<option value='"+dict.value+"'>"+dict.name+"</option>"
+                    });
+                    $('#update_'+groupId).html(options);
+                }
+            })
+        }
+    }
+    window.houseEvent={
+        'click #updateBtn':function (event,value,row,index) {
+            console.log(row);
+            $('#update_house_Id').val(row.id);
 
 
+            $('#update_province').val(row.province);
+
+            House.queryArea('update_city',row.province);
+            $('#update_city').val(row.city);
+
+            House.queryArea('update_area',row.city);
+            $('#update_area').val(row.area);
+
+
+            $('#update_house_type').val(row.houseType);
+
+            $('#update_rental').val(row.rental);
+
+            $('#update_orientation').val(row.orientation);
+
+            $('#update_rent_mode').val(row.rentMode);
+
+            $('#update_address').val(row.address);
+        }
     }
 
 </script>
