--- a/src/main/resources/templates/house/list.html
+++ b/src/main/resources/templates/house/list.html
@@ -111,6 +111,7 @@
     </div>
 </div>
 
+<!--  房源信息  -->
 <table id="listTable"></table>
 
 <!-- Modal -->
@@ -211,13 +212,14 @@
                     </div>
                 </form>
             </div>
-<!--        <div class="modal-footer">-->
-<!--            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-<!--            <button type="button" class="btn btn-primary">Save changes</button>-->
-<!--        </div>-->
         </div>
     </div>
 </div>
+
+<!--房源删除-->
+<form method="post" id="delForm">
+    <input type="hidden" name="_method" value="delete">
+</form>
 
 <script th:src="@{/lib/js/jquery/jquery.min.js}" type="text/javascript"></script>
 <script th:src="@{/lib/bootstrap/js/bootstrap.min.js}" type="text/javascript"></script>
@@ -333,9 +335,12 @@
                         }
                     },
                     {title: '操作',formatter: function (value,row,index) {
-                        let updateBtn ="<button id='updateBtn' class='btn btn-primary' type='button'" +
-                                       "data-toggle='modal' data-target='#myModal'>更新</button>"
-                        return  updateBtn;
+                        let updateBtn =
+                            "<button id='updateBtn' class='btn btn-primary' type='button'" +
+                                "data-toggle='modal' data-target='#myModal'>更新</button>"
+                        let deleteBtn =
+                            "<button id='deleteBtn' class='btn btn-danger' type='button'>删除</button>"
+                        return  updateBtn+""+deleteBtn;
                         },
                         events:houseEvent
                     },
@@ -442,6 +447,15 @@
             $('#update_rent_mode').val(row.rentMode);
 
             $('#update_address').val(row.address);
+        },
+        'click #deleteBtn':function (event,value,row,index) {
+            console.log(row);
+            let action =path +'/house/'+row.id;
+            if(confirm('确定要删除吗？')){
+                $("#delForm").attr('action',action).submit();
+            }
+
+
         }
     }
 
