--- a/src/main/resources/templates/house/reg.html
+++ b/src/main/resources/templates/house/reg.html
@@ -22,33 +22,33 @@
         年龄
         性别
     -->
-    <form th:action="@{/user/reg}" method="post" class="form-horizontal" role="form">
+    <form th:action="@{/user/reg}" method="post" class="form-horizontal" role="form" id="regForm">
         <!-- 1. 用户名 -->
         <div class="form-group">
             <label for="username" class="col-sm-2 control-label">用户名</label>
-            <div class="col-sm-3 input-group">
-                <input type="text" id="username" name="name">
+            <div class="col-sm-3 input-group" >
+                <input type="text" id="username" name="name" class="form-control">
             </div>
         </div>
         <!-- 2. 密码 -->
         <div class="form-group">
             <label for="password" class="col-sm-2 control-label">密码</label>
             <div class="col-sm-3 input-group">
-                <input type="password" id="password" name="password">
+                <input type="password" id="password" name="password" class="form-control">
             </div>
         </div>
         <!-- 3. 确认密码 -->
         <div class="form-group">
             <label for="confirm_password" class="col-sm-2 control-label">确认密码</label>
             <div class="col-sm-3 input-group">
-                <input type="password" id="confirm_password" name="confirmPassword">
+                <input type="password" id="confirm_password" name="confirmPassword" class="form-control">
             </div>
         </div>
         <!-- 4. 邮箱 -->
         <div class="form-group">
             <label for="email" class="col-sm-2 control-label">邮箱</label>
             <div class="col-sm-3 input-group">
-                <input type="email" id="email" name="email">
+                <input type="email" id="email" name="email" class="form-control">
             </div>
         </div>
         <!-- 5. 年龄 -->
@@ -86,6 +86,54 @@
     <script th:inline="javascript">
         // 定义contextPath
         const path = [[${#request.getContextPath()}]];
+        $(function () {
+            User.regValidate();
+        })
+
+        let User={
+            regValidate:function () {
+                $("#regForm").validate({
+                    errorElement:'div',
+                    success:function(successElement){
+                        successElement.addClass('input-group-addon').text('ok');
+                    },
+                    errorPlacement:function(errorEle,element){
+                        errorEle.addClass('input-group-addon');
+                        errorEle.appendTo(element.parent());
+                    },
+                    rules:{
+                        name:{
+                            required:true,
+                            remote:{//错误返回字符串类型得false  成功时字符串ture
+                               url:path+'/user/validateName',
+                                type:'get',
+                                data:{
+                                   name:function () {
+                                       return $("#username").val();
+                                   }
+                                }
+                            }
+                        },
+                        password:'required',
+                        confirmPassword:{
+                            required:true,
+                            equalTo:'#password'
+                        }
+                    },
+                    messages:{
+                        name:{
+                            required: '必填项',
+                            remote:'用户名已存在'
+                        },
+                        password: '必填项',
+                        confirmPassword:{
+                            required:'必填项',
+                            equalTo:'密码不一致'
+                        }
+                    }
+                });
+            }
+        }
     </script>
 </body>
 </html>
